syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
package CareerCloud.gRPC;
service SystemLanguageCode {
	rpc ReadSystemLanguageCode(IdRequestLanguageCode) returns (SystemLanguageCodePayload);
	rpc CreateSystemLanguageCode(SystemLanguageCodePayload) returns (google.protobuf.Empty);
	rpc UpdateSystemLanguageCode(SystemLanguageCodePayload) returns (google.protobuf.Empty);
	rpc DeleteSystemLanguageCode(SystemLanguageCodePayload) returns (google.protobuf.Empty);
}
message IdRequestLanguageCode{
		string LanguageID=1;
	}

	message SystemLanguageCodePayload {
	   string LanguageID = 1;
       string Name = 2;
       string NativeName = 3;
	}